syntax = "proto3";


option go_package="genproto/message";
package message;

service MessageService {
    rpc AddMessage(MessageReq) returns (MessageRes) {}
    rpc FindMessage(MessageId) returns (MessageRes) {}
}
message MessageId {
    int64 message_id = 1;
}

message MessageReq {
    int64 user_id = 1;
    int64 chat_id = 2;
    string message_text = 3;
}

message MessageRes {
    int64 id = 1;
    int64 user_id = 2;
    int64 chat_id = 3;
    string message_text = 4;
    string created_at = 5;
    string updated_at = 6;
}